login bug squashed, cleaned up cruft

--- a/wellnessproject/client/src/components/auth/Register/register.css
+++ b/wellnessproject/client/src/components/auth/Register/register.css
@@ -11,3 +11,9 @@
     opacity: 90%;
     filter: drop-shadow(0px 0px 40px rgb(190, 200, 255));
 }
+
+.signup-bttns {
+font-size: 24px;
+color: black;
+
+}
