--- a/wellnessproject/client/src/pages/Journal/JournalStyle.css
+++ b/wellnessproject/client/src/pages/Journal/JournalStyle.css
@@ -1,11 +1,10 @@
 .Journal {
     background-image: url(../../images/aaron-burden-iIWF5HJstGY-unsplash.jpg);
-    height:768px;
-    position: relative;
     background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    z-index: 0;
+    background-size: inherit;
+    background-attachment: fixed;
+    background-position: inherit;
+    height: 100%;
 }
 
 .journal-form {
