--- a/wellnessproject/client/src/pages/Landing/landing.css
+++ b/wellnessproject/client/src/pages/Landing/landing.css
@@ -6,7 +6,6 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    font-family: 'Girassol', cursive;
 }
 
 .intro {
